--- a/NineWebApp/appsettings.json
+++ b/NineWebApp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NineWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=NineWebAppContext-6712c579-b883-4161-80ce-9f1197e51485;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
