Added Race Random Generator, Added 1 Age loop, some unit tests

--- a/NineWebApp/appsettings.Development.json
+++ b/NineWebApp/appsettings.Development.json
@@ -5,5 +5,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+
+  "CachingConfigurations": {
+    "CachedMinutes": 5,
+    "CachedDays": 1,
+    "CachedSize": 1
   }
+
+
 }
